--- a/src/app/application-form/review-form/review-form.component.html
+++ b/src/app/application-form/review-form/review-form.component.html
@@ -1,8 +1,18 @@
-<div class="container">
-    <div class="row justify-content-center">
+<div class="container" *ngIf="isLoading === false">
+    <div class="row justify-content-center text-center">
         <div class="col col-md-12 col-lg-12 col-sm-12">
-            <table class="table table-dark">
-                <thead>
+            <div class="mt-3 row" *ngIf="applicationFormDataArray.length == 0" >
+              <div class="col col-md-12">
+                <h1>No Data to Review</h1>
+              </div>
+              <div class="col col-md-12">
+                <button class="btn btn-warning btn-md" routerLink="/create">Create Application</button>
+              </div>
+            </div>
+            <div class="row" *ngIf="applicationFormDataArray.length > 0">
+              <div class="col col-md-12 col-lg-12">
+                <table class="table table-dark mt-5">
+                  <thead>
                   <tr>
                     <th scope="col">S. No</th>
                     <th scope="col">#</th>
@@ -11,27 +21,31 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let applicationFormData of applicationFormDataArray">
-                        <th scope="row">{{applicationFormData.ind}}</th>
-                        <td scope="row">{{applicationFormData.key}}</td>
+                    <th scope="row">{{applicationFormData.ind}}</th>
+                        <td scope="row">{{applicationFormData.key.charAt(0).toUpperCase() + applicationFormData.key.slice(1)}}</td>
                         <td>{{applicationFormData.val}}</td>
                   </tr>
-                  <!-- <tr>
-                    <th scope="row">2</th>
-                    <td scope="row">Age</td>
-                    <td>{{applicationFormData.age}}</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td scope="row">Address</td>
-                    <td>{{applicationFormData.address}}</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">4</th>
-                    <td scope="row">Address</td>
-                    <td>{{applicationFormData.address}}</td>
-                  </tr> -->
                 </tbody>
               </table>
+            </div>
+            <div class="col col-md-12 col-lg-12">
+              <div class="row">
+                <div class="col col-md-6 col-sm-12">
+                  <button class="btn btn-success" (click)="onSubmitReviewForm()">Submit</button>
+                </div>
+                <div class="col col-md-6 col-sm-12">
+                  <button class="btn btn-warning" routerLink="/create">Edit</button>
+                </div>
+              </div>
+            </div>
+            </div>
         </div>
     </div>
+</div>
+<div class="container" *ngIf="isLoading === true">
+  <div class="row text-center text-center justify-content-center">
+    <div class="col col-md-12 col-lg-12">
+      <mat-spinner></mat-spinner>
+    </div>
+  </div>
 </div>
